columns and links are fixed

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -109,3 +109,9 @@ body {
 .top-container-task {
   text-align: center;
 }
+
+.regular-text a:link {
+  font-size: 75%;
+  color: #0000FF;
+  background-color: transparent !important;
+}
