--- a/app/assets/stylesheets/allocated_tasks.css.scss
+++ b/app/assets/stylesheets/allocated_tasks.css.scss
@@ -65,3 +65,9 @@
 	text-align: center !important;
 	color: black !important;
 }
+
+.regular-text a:link {
+  font-size: 75%;
+  color: #0000FF;
+  background-color: transparent !important;
+}
