fixed bug when user does not upload and downloads, and if they don't upload a file

--- a/app/views/crm/index.html.erb
+++ b/app/views/crm/index.html.erb
@@ -1,4 +1,7 @@
 <body>
+    <% if notice %>
+        <p id="notice"><%= notice %></p>
+    <% end %>
   <!--div class="page-wrapper"-->
 	<div class="col-md-6 column-wrapper">
 	  <div class="inner-column">
