css files are fixed

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -110,7 +110,7 @@ body {
   text-align: center;
 }
 
-.regular-text a:link {
+.text-edit a:link {
   font-size: 75%;
   color: #0000FF;
   background-color: transparent !important;
