--- a/app/assets/stylesheets/allocated_tasks.css.scss
+++ b/app/assets/stylesheets/allocated_tasks.css.scss
@@ -30,7 +30,7 @@
 	border-color: black !important;
 }
 
-.regular-text a:link {
+.text-edit a:link {
 	font-size: 120%;
 	color: #0000FF;
 	background-color: transparent !important;
