--- a/app/views/tasks/_writer_task.erb
+++ b/app/views/tasks/_writer_task.erb
@@ -1,5 +1,5 @@
 <ul class="nav">
-<li id="drag1" draggable="true" ondragstart="drag(event)"><a style="padding: 0px" class="btn-x" href=<%="/tasks/deleteOpportunity?id="+ @current_task.id.to_s%>  role="button">X</a>
+<li id=<%= @current_task.oppty.id%> draggable="true" ondragstart="drag(event)"><a style="padding: 0px" class="btn-x" href=<%="/tasks/deleteOpportunity?id="+ @current_task.id.to_s%>  role="button">X</a>
   <div class="task-bg"> <h3 class="text-edit"><b><%= link_to @current_task.oppty.opptyName, @current_task.oppty%></b></h3>
     <p>Due in <%= (@current_task.oppty.proposalDueDate-Date.today).to_i %>days</p>
     <p>Priority: (HIGH,MED,LOW)</p>
