added ui for writer to drag tasks

--- a/app/views/tasks/_writer_task.erb
+++ b/app/views/tasks/_writer_task.erb
@@ -1,29 +1,8 @@
 <ul class="nav">
-<li id="<%= @current_task.id %>" draggable="true" ondragstart="drag(event)"><a style="padding: 0px" class="btn-x" href=<%="/tasks/deleteOpportunity?id="+ @current_task.id.to_s%>  role="button">X</a>
+<li id="<%= @current_task.id %>"><a style="padding: 0px" class="btn-x" href=<%="/tasks/deleteOpportunity?id="+ @current_task.id.to_s%>  role="button">X</a>
   <div class="task-bg"> <h3 class="text-edit"><b><%= link_to @current_task.oppty.opptyName, @current_task.oppty%></b></h3>
     <p>Due in <%= (@current_task.oppty.proposalDueDate-Date.today).to_i %>days</p>
     <p>Priority: (HIGH,MED,LOW)</p>
-    <form action ="/tasks/updateStatus" method="post">
-      <input name="_method" type="hidden" value="put" />
-      <input hidden=true type="integer" name="status" value=2>
-      <input hidden=true type="integer" name="id" value=<%= @current_task.id%>>
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-      <button style= "z-index:3" type="submit">todo</button>
-    </form>
-    <form action ="/tasks/updateStatus" method="post">
-      <input name="_method" type="hidden" value="put" />
-      <input hidden=true type="integer" name="status" value=1>
-      <input hidden=true type="integer" name="id" value=<%= @current_task.id%>>
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-      <button style="z-index: 3" type="submit">doing</button>
-    </form> 
-    <form action ="/tasks/updateStatus" method="post">
-      <input name="_method" type="hidden" value="put" />
-      <input hidden=true type="integer" name="status" value=0>
-      <input hidden=true type="integer" name="id" value=<%= @current_task.id%>>
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-      <button style="z-index: 3" type="submit">done</button>
-    </form>
     <form action =<%=histories_path %> method="post">
       <input hidden=true type="integer" name="oppty_id" value=<%= @current_task.oppty.id%>>
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
