--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,66 +1,55 @@
 <html lang="en">
   <head>
     <title>Tasks</title>
+
   </head>
 
   <body>
-    <div class="container tasks-queue">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-3 op-title-bg-left">
-          <h2 class="op-title">Assigned</h2>
-        </div>
-        <div class="col-md-3 op-title-bg-left">
-          <h2 class="op-title">To-Do</h2>
-        </div>
-        <div class="col-md-3 op-title-bg-middle">
-          <h2 class="op-title">In Progress</h2>
-        </div>
-        <div class="col-md-3 op-title-bg-right">
-          <h2 class="op-title">Done</h2>
-        </div>
-        <div class="row-2">
-          <div class="col-md-3" style="visibility:hidden;"></div>
-          <div class="col-md-3 op-body-bg-left" id="div1" ondrop="drop(event, this)" ondragover="allowDrop(event)"><h4 class="op-title">Drop Task Here to Accept</h4></div>
-          <div class="col-md-3 op-body-bg-middle" id="div2" ondrop="drop(event, this)" ondragover="allowDrop(event)"><h4 class="op-title">Drop Task Here While in Progress</h4></div>
-          <div class="col-md-3 op-body-bg-right" id="div3" ondrop="drop(event, this)" ondragover="allowDrop(event)"><h4 class="op-title">Drop Task Here When Done</h4></div>
-        </div>
-        <div class="row-2">
-          <div class="col-md-3 op-body-bg-left">
+
+          <div class="layer tile" data-force="30">
+            <div class="tile__name">Assigned</div>
+            <div class="tile__list" id="list1">
               <% @assigned.each do |o|%>
                 <% @current_task=o %>
                 <%= render partial: "writer_task" %>
               <% end%>
-         </div>
+            </div>
+          </div>
+          <div class="layer tile" data-force="30">
+            <div class="tile__name">To Do</div>
+            <div class="tile__list" id="list2">
+                <% @to_do.each do |o|%>
+                    <% @current_task=o %>
+                    <%= render partial: "writer_task" %>
+                 <%end%>
+            </div>
+          </div>
 
-          <div class="col-md-3">
-              <% @to_do.each do |o|%>
-                <% @current_task=o %>
-                <%= render partial: "writer_task" %>
-              <% end%>
-         </div>
 
-         <div class="col-md-3">
+          <div class="layer tile" data-force="30">
+            <div class="tile__name">Doing</div>
+            <div class="tile__list" id="list3">
              <% @doing.each do |o|%>
                <% @current_task=o %>
                <%= render partial: "writer_task" %>
              <% end%>
-         </div>
-         <div class="col-md-3">
+            </div>
+          </div>
+
+          <div class="layer tile" data-force="30">
+            <div class="tile__name">Done</div>
+            <div class="tile__list" id="list4">
              <% @done.each do |o|%>
                <% @current_task=o %>
                <%= render partial: "writer_task" %>
              <% end%>
-         </div>
-       </div>
-     </div>
-    </div>
-
+            </div>
+          </div>
 <style>
   #div1, #div2, #div3 {backgorund:transparent;border:2px dashed black;height:75px;width:292px;}
 </style>
 
-
+<%= javascript_include_tag 'updateStatus' %>
 <script>
 
 function allowDrop(ev) {
