--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -13,7 +13,7 @@
             <h2 class="op-title-col">Assigned</h2>
         </div>
     	<div class="col-md-3 op-title-bg-left">
-    		<h2 class="op-title-col">TO DO</h2>
+    		<h2 class="op-title-col">To Do</h2>
     	</div>
 	    <div class="col-md-3 op-title-bg-middle">
     		<h2 class="op-title-col">In Progress</h2>
