--- a/app/assets/stylesheets/oppties.css.scss
+++ b/app/assets/stylesheets/oppties.css.scss
@@ -2,7 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .op-title {
-	padding: 10px;
+	padding: 25px;
+	font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 32px;
 }
 
 .manager-col-button {
@@ -16,3 +18,7 @@
 .btn-container {
 	margin: 25px 20px 20px 20px !important;
 } 
+
+.comment-paragraph {
+	line-height: 110%;
+}
