--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -51,13 +51,13 @@
 
                 <!-- this is the space between the radio buttons and the drop down menu for sorting.
                     it prevents the ratio of clicking not to be a random place on the screen -->
-                <td class="col-md-6">
-                </td>
+                <!--td class="col-md-2">
+                </td-->
 
                 <!-- drop down menu in Browse Page to sort the opportunities by a specific field -->
                 <div class="col-md-2">
                   <td class="col-md-1">
-                		<label class="black-text">
+                		<label class="black-text sort-dropdown-label">
                   		Sort By:
                 		</label>
                   </td>
@@ -78,6 +78,7 @@
               		  </div>  
                   </td>
                 </div>
+                <td class="col-md-1"></td>
               </tr>
             </table>
           </div>
@@ -85,7 +86,7 @@
       <br>
     </div>
 
-    <caption><h2 class="black-text" style="text-align: center;">Opportunities</h2></caption>
+    <h2 class="black-text browse-page-title">Opportunities</h2>
 
     <div class="row" style="font-weight: bold;">
       <div class="col-md-2" style="text-align: center;"> Opportunity ID </div>
