--- a/app/assets/stylesheets/upload_crm.css.scss
+++ b/app/assets/stylesheets/upload_crm.css.scss
@@ -51,6 +51,10 @@
 }
 
 .column-title {
+	font-family: verdana, arial, helvetica, sans-serif;
+    padding-top: 10px;
+    //text-align: center;
+    font-size: 32px;
 	margin-bottom: 20px !important;
 }
 
