adjusted bootstrap columns and removed unnecessary code

--- a/app/views/browse/search.html.erb
+++ b/app/views/browse/search.html.erb
@@ -45,19 +45,12 @@
                       </td>
                     </form>
                   </td>
-
-
                 </div>
-
-                <!-- this is the space between the radio buttons and the drop down menu for sorting.
-                    it prevents the ratio of clicking not to be a random place on the screen -->
-                <td class="col-md-6">
-                </td>
 
                 <!-- drop down menu in Browse Page to sort the opportunities by a specific field -->
                 <div class="col-md-2">
                   <td class="col-md-1">
-                    <label class="black-text">
+                    <label class="black-text sort-dropdown-label">
                       Sort By:
                     </label>
                   </td>
@@ -78,6 +71,7 @@
                     </div>  
                   </td>
                 </div>
+                <td class="col-md-1"></td>
               </tr>
             </table>
           </div>    
