--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -50,6 +50,7 @@
 </style>
 
 <%= javascript_include_tag 'updateStatus' %>
+<%= javascript_include_tag 'tasks' %>
 <script>
 
 function allowDrop(ev) {
